# ammon

./: .gitignore  CMakeLists.txt  README.md  run.sh
doc/: sema.txt
include/: consumer.h  debug.h  exp.h  util.h
src/: CMakeLists.txt  main.cpp
src/consumer/: astConsumerFactory.cpp  forSemiSyntax.cpp  operandSemantic.cpp  operatorSemantic.cpp  parenSyntax.cpp  undefVarSyntax.cpp  variableSemantic.cpp
src/consumer/semantic/: boundSemantic.cpp  operandSemantic.cpp  operatorSemantic.cpp  varUseSemantic.cpp  variableSemantic.cpp
src/consumer/syntax/: forSemiSyntax.cpp  parenSyntax.cpp  undefVarSyntax.cpp
src/exp/: invalidConsumerExp.cpp  noMoreConsumerExp.cpp
src/util/: rand.cpp
test/: t0.cpp  t1.cpp  t10.cpp  t11.cpp  t2.cpp  t3.cpp  t4.cpp  t4.h  t5.cpp  t6.cpp  t7.cpp  t8.cpp  t9.cpp
